[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-queue-bus"
version = "0.1.0"
description = "Python port of queue-bus compatible with node-queue-bus and resque-bus"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Queue Bus Python Port" }]
dependencies = [
  "redis>=5.0",
    "rq>=1.15",
  "tzlocal>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "fakeredis>=2.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
